<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/backgroundVerde"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SplashScreenActivity">

    <Button
        android:id="@+id/button"
        style="@style/backgroundAmarelo"
        android:layout_width="330dp"
        android:layout_height="80dp"
        android:layout_marginTop="52dp"
        android:drawableRight="@drawable/icon_place"
        android:text="@string/button_denuncia"
        android:textColor="#000000"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button4"
        style="@style/backgroundAmarelo"
        android:layout_width="330dp"
        android:layout_height="80dp"
        android:layout_marginTop="40dp"
        android:drawableRight="@drawable/icon_flag"
        android:text="@string/button_casos"
        android:textColor="#000000"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.518"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button3" />

    <ImageButton
        android:id="@+id/imageButton"
        style="@style/backgroundAmarelo"
        android:layout_width="100dp"
        android:layout_height="80dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="30dp"
        android:onClick="abrirTelefone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.769"
        app:layout_constraintStart_toEndOf="@+id/button5"
        app:layout_constraintTop_toBottomOf="@+id/button4"
        app:layout_constraintVertical_bias="0.013"
        app:srcCompat="@drawable/icon_phone" />

    <Button
        android:id="@+id/button5"
        style="@style/backgroundAmarelo"
        android:layout_width="200dp"
        android:layout_height="80dp"
        android:layout_marginTop="50dp"
        android:drawableRight="@drawable/icon_notifications"
        android:text="@string/button_notificacoes"
        android:textColor="#000000"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.199"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button4"
        app:layout_constraintVertical_bias="0.013" />

    <Button
        android:id="@+id/button3"
        style="@style/backgroundAmarelo"
        android:layout_width="150dp"
        android:layout_height="80dp"
        android:layout_marginTop="52dp"
        android:layout_marginEnd="32dp"
        android:drawableRight="@drawable/icon_mosquito"
        android:text="@string/button_cuidados"
        android:textColor="#000000"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.769"
        app:layout_constraintStart_toEndOf="@+id/button2"
        app:layout_constraintTop_toBottomOf="@+id/button" />

    <Button
        android:id="@+id/button2"
        style="@style/backgroundAmarelo"
        android:layout_width="150dp"
        android:layout_height="80dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="52dp"
        android:drawableRight="@drawable/icon_injection"
        android:text="@string/button_sintomas"
        android:textColor="#000000"
        android:textSize="15sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="70dp"
        android:layout_marginBottom="34dp"
        android:text="@string/footer_name"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.534"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageButton"
        app:layout_constraintVertical_bias="0.166" />

</androidx.constraintlayout.widget.ConstraintLayout>